# textsplitter

./: .gitignore  LICENSE.md  README.md  __init__.py  constants.py  patterns.py  pyproject.toml  splitter.py  utils.py
chunks/: __init__.py  backends.py  chunk_backends.py  chunk_handling.py  chunk_utils.py  chunker.py  constants.py  graph_chunker.py  handling.py  linear_chunker.py  utils.py
chunks/backends/: __init__.py  graph_chunking.py  linear_chunking.py  segmenters.py  sliding_linear.py
chunks/chunkers/: graph_chunker.py  linear_chunker.py
chunks/methods/: graph_chunking.py  linear_chunking.py
chunks/techniques/: graph_chunking.py
dataframes/: __init__.py  columns.py  functions.py
paragraphs/: __init__.py  backends.py  constants.py  handling.py  para_backends.py  para_handling.py  para_splitting.py  para_utils.py  paragrapher.py  patterns.py  utils.py
paragraphs/backends/: __init__.py  clean.py  regex.py  segmenters.py
sentences/: __init__.py  backends.py  handling.py  sent_backends.py  sent_handling.py  sentencizer.py
sentences/backends/: __init__.py  pysbd.py  spacy.py
textsplitter/: constants.py  splitter.py  utils.py
textsplitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
textsplitter/chunks/: __init__.py  chunker.py  constants.py  embeddings.py  handling.py  utils.py
textsplitter/dataframes/: columns.py  functions.py
textsplitter/paragraphs/: __init__.py  handling.py  paragrapher.py  patterns.py  utils.py
textsplitter/sentences/: __init__.py  handling.py  (+1 more)
tokens/: __init__.py  backends.py  constants.py  handling.py  tokenizer.py
(+25 files in other folders)
