[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textsplitter"
version = "0.1.0"
description = "A package for implementing different text splitting techniques."
authors = [
    { name = "Boris Bachmann", email = "boris.bachmann@googlemail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-louvain~=0.16",
    "networkx~=3.4.2",
    "numpy~=2.2.4",
    "scikit-learn~=1.6.1",
    "sentence-transformers~=3.4.1",
    "tqdm~=4.67.1",
    "pandas~=2.2.3",
    "torch~=2.6.0",
    "transformers~=4.47.1",
    "spacy~=3.8.4",
    "wtpsplit~=2.1.4",
    "pysbd~=0.3.4"
]

[project.urls]
Homepage = "https://github.com/sereios/textsplitter"